--- a/app/views/question/ask.html.erb
+++ b/app/views/question/ask.html.erb
@@ -1,7 +1,5 @@
 <p>This is the question</p>
-<form action="/ask" method='get'>
+<form action="/answer" method='get'>
   <input type="text" name="ask">
   <input type="submit" value="Ask!">
 </form>
-
-<h1><%= @params %></h1>
